project(app): add complete project
