# src/routes/product.js
@@ -3,6 +3,8 @@ import {
   getAllProducts,
   getSingleProduct,
   createProduct,
+  updateProduct,
+  deleteProduct,
 } from "../app/controllers/ProductController.js";
 import { verifyToken } from "../middlewares/verify.js";
 import { upload } from "../middlewares/upload.js";
@@ -11,6 +13,8 @@ const router = express.Router();
 
 router.get("/all", verifyToken, getAllProducts);
 router.get("/single/:productId", verifyToken, getSingleProduct);
-router.post("/create", upload.single("image"), verifyToken, createProduct);
+router.post("/create", verifyToken, upload.single("image"), createProduct);
+router.put("/update/:productId", verifyToken, upload.single("image"), updateProduct);
+router.delete("/delete/:productId", verifyToken, deleteProduct);
 
 export default router;
